--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
 
 
     </dependencies>
